tests/ui/transmutability/malformed-program-gracefulness/feature-missing.stderr
error[E0658]: use of unstable library feature 'transmutability'
  --> $DIR/feature-missing.rs:5:5
   |
LL | use std::mem::BikeshedIntrinsicFrom;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #99571 <https://github.com/crablang/crablang/issues/99571> for more information
   = help: add `#![feature(transmutability)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'transmutability'
  --> $DIR/feature-missing.rs:8:5
   |
LL | use std::mem::Assume;
   |     ^^^^^^^^^^^^^^^^
   |
   = note: see issue #99571 <https://github.com/crablang/crablang/issues/99571> for more information
   = help: add `#![feature(transmutability)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `crablangc --explain E0658`.
